Normalización de clases y solución de errores