@@ -1,9 +1,6 @@
 package org.nexus.proyecto_fn_nexus.web.jsf;
 
 import jakarta.annotation.PostConstruct;
-import jakarta.faces.application.FacesMessage;
-import jakarta.faces.context.FacesContext;
-
 import jakarta.faces.view.ViewScoped;
 import jakarta.inject.Named;
 import org.nexus.proyecto_fn_nexus.dominio.CategoriaRecurso;
@@ -14,145 +11,139 @@ import org.nexus.proyecto_fn_nexus.web.jsf.dto.RecursoJsfDto;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import java.io.Serializable;
+import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Named("recursoJsfController")
+@Named
 @ViewScoped
 public class RecursoJsf implements Serializable {
 
-    private final RecursoService recursoService;
-    private RecursoJsfDto nuevoRecurso;
-    private List<RecursoJsfDto> listaRecursos;
-    private Integer idRecurso;
-
-
-
     @Autowired
-    public RecursoJsf(RecursoService recursoService) {
-        this.recursoService = recursoService;
-    }
+    private RecursoService recursoService;
+
+    private List<RecursoJsfDto> listaRecursos;
+
+    // Para creación/edición
+    private Long idRecurso;
+    private String nombreRecurso;
+    private CategoriaRecurso categoria;
+    private Integer stock;
+    private BigDecimal precioAlquiler;
+
+    private boolean modoEdicion = false;
 
     @PostConstruct
     public void init() {
-        this.nuevoRecurso = new RecursoJsfDto();
-        this.listaRecursos = mapToJsfDto(this.recursoService.obtenerTodo());
+        cargarRecursos();
     }
 
-    private List<RecursoJsfDto> mapToJsfDto(List<RecursoDto> recursos) {
-        return recursos.stream().map(r -> {
-            RecursoJsfDto dto = new RecursoJsfDto();
-            dto.setIdRecurso(r.idRecurso());
-            dto.setResourceName(r.resourceName());
-            dto.setCategory(r.category());
-            dto.setStock(r.stock());
-            dto.setRentalPrice(r.rentalPrice());
-            return dto;
-        }).collect(Collectors.toList());
+    public void cargarRecursos() {
+        List<RecursoDto> recursos = recursoService.obtenerTodo();
+        this.listaRecursos = recursos.stream()
+                .map(r -> new RecursoJsfDto(
+                        r.idRecurso(),
+                        r.nombreRecurso(),
+                        r.categoria(),
+                        r.stock(),
+                        r.precioAlquiler()
+                ))
+                .toList();
     }
 
-    public void guardarOActualizar() {
-        if (this.nuevoRecurso.getIdRecurso() == null) {
-            guardarRecurso();
+    public void prepararNuevo() {
+        limpiarFormulario();
+        this.modoEdicion = false;
+    }
+
+    public void prepararEdicion(RecursoJsfDto recurso) {
+        this.modoEdicion = true;
+        this.idRecurso = recurso.getIdRecurso();
+        this.nombreRecurso = recurso.getNombreRecurso();
+        this.categoria = recurso.getCategoria();
+        this.stock = recurso.getStock();
+        this.precioAlquiler = recurso.getPrecioAlquiler();
+    }
+
+    public void guardar() {
+        if (modoEdicion) {
+            ModificarRecursoDto mod = new ModificarRecursoDto(
+                    nombreRecurso, categoria, stock, precioAlquiler
+            );
+            recursoService.modificarRecurso(idRecurso, mod);
         } else {
-            actualizarRecurso();
-        }
-    }
-
-
-    public void guardarRecurso() {
-        System.out.println(">>> guardarRecurso() llamado"); // <--- para verificar que entra al método
-
-        try {
-            System.out.println(">>> Datos del recurso a guardar:");
-            System.out.println("Nombre: " + this.nuevoRecurso.getResourceName());
-            System.out.println("Categoría: " + this.nuevoRecurso.getCategory());
-            System.out.println("Stock: " + this.nuevoRecurso.getStock());
-            System.out.println("Precio: " + this.nuevoRecurso.getRentalPrice());
-
-            RecursoDto recursoDto = new RecursoDto(
-                    this.nuevoRecurso.getIdRecurso(),  // ahora sí usas el id
-                    this.nuevoRecurso.getResourceName(),
-                    this.nuevoRecurso.getCategory(),
-                    this.nuevoRecurso.getStock(),
-                    this.nuevoRecurso.getRentalPrice()
+            RecursoDto nuevo = new RecursoDto(
+                    null, nombreRecurso, categoria, stock, precioAlquiler
             );
+            recursoService.guardarRecurso(nuevo);
+        }
+        cargarRecursos();
+    }
 
-
-            this.recursoService.guardarRecurso(recursoDto);
-            this.nuevoRecurso = new RecursoJsfDto();
-            this.listaRecursos = mapToJsfDto(this.recursoService.obtenerTodo());
-
-            System.out.println(">>> Recurso guardado correctamente"); // <--- confirmación de ejecución
-
-            FacesContext.getCurrentInstance().addMessage(null,
-                    new FacesMessage(FacesMessage.SEVERITY_INFO, "Éxito", "Recurso guardado exitosamente"));
-        } catch (Exception e) {
-            System.out.println(">>> ERROR en guardarRecurso(): " + e.getMessage());
-            e.printStackTrace();
-
-            FacesContext.getCurrentInstance().addMessage(null,
-                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error al guardar", e.getMessage()));
+    public void eliminar() {
+        if (idRecurso != null) {
+            recursoService.eliminarRecurso(idRecurso);
+            cargarRecursos();
         }
     }
 
-    public void actualizarRecurso() {
-        try {
-            ModificarRecursoDto modificarRecursoDto = new ModificarRecursoDto(
-                    this.nuevoRecurso.getResourceName(),
-                    this.nuevoRecurso.getCategory(),
-                    this.nuevoRecurso.getStock(),
-                    this.nuevoRecurso.getRentalPrice()
-            );
-
-            this.recursoService.modificarRecurso(this.nuevoRecurso.getIdRecurso(), modificarRecursoDto);
-            this.nuevoRecurso = new RecursoJsfDto();
-            this.listaRecursos = mapToJsfDto(this.recursoService.obtenerTodo());
-
-            FacesContext.getCurrentInstance().addMessage(null,
-                    new FacesMessage(FacesMessage.SEVERITY_INFO, "Éxito", "Recurso actualizado con éxito"));
-        } catch (Exception e) {
-            FacesContext.getCurrentInstance().addMessage(null,
-                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error al actualizar", e.getMessage()));
-        }
+    private void limpiarFormulario() {
+        idRecurso = null;
+        nombreRecurso = null;
+        categoria = null;
+        stock = null;
+        precioAlquiler = null;
     }
 
-    public void seleccionarRecurso(RecursoJsfDto recursoDto) {
-        this.nuevoRecurso = recursoDto;
-    }
-
-    public void eliminarRecurso() {
-        try {
-            this.recursoService.eliminarRecurso(this.idRecurso);
-            this.listaRecursos = mapToJsfDto(this.recursoService.obtenerTodo());
-
-            FacesContext.getCurrentInstance().addMessage(null,
-                    new FacesMessage(FacesMessage.SEVERITY_INFO, "Éxito", "Recurso eliminado con éxito"));
-        } catch (Exception e) {
-            FacesContext.getCurrentInstance().addMessage(null,
-                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error al eliminar", e.getMessage()));
-        }
-    }
-
-
-
-    public Integer getIdRecurso() { return idRecurso;}
-
-    public void setIdRecurso(Integer idRecurso) {this.idRecurso = idRecurso;}
-
-    public CategoriaRecurso[] getCategorias() {
-        return CategoriaRecurso.values();
-    }
-
-    public RecursoJsfDto getNuevoRecurso() {
-        return nuevoRecurso;
-    }
-
-    public void setNuevoRecurso(RecursoJsfDto nuevoRecurso) {
-        this.nuevoRecurso = nuevoRecurso;
-    }
-
+    // Getters y setters
     public List<RecursoJsfDto> getListaRecursos() {
         return listaRecursos;
+    }
+
+    public boolean isModoEdicion() {
+        return modoEdicion;
+    }
+
+    public Long getIdRecurso() {
+        return idRecurso;
+    }
+
+    public void setIdRecurso(Long idRecurso) {
+        this.idRecurso = idRecurso;
+    }
+
+    public String getNombreRecurso() {
+        return nombreRecurso;
+    }
+
+    public void setNombreRecurso(String nombreRecurso) {
+        this.nombreRecurso = nombreRecurso;
+    }
+
+    public CategoriaRecurso getCategoria() {
+        return categoria;
+    }
+
+    public void setCategoria(CategoriaRecurso categoria) {
+        this.categoria = categoria;
+    }
+
+    public Integer getStock() {
+        return stock;
+    }
+
+    public void setStock(Integer stock) {
+        this.stock = stock;
+    }
+
+    public BigDecimal getPrecioAlquiler() {
+        return precioAlquiler;
+    }
+
+    public void setPrecioAlquiler(BigDecimal precioAlquiler) {
+        this.precioAlquiler = precioAlquiler;
+    }
+
+    public CategoriaRecurso[] getCategoriasDisponibles() {
+        return CategoriaRecurso.values();
     }
 }
